<resources>
    <string name="app_name">Login</string>
    <string name="email_title">Email</string>
    <string name="pass_title">Password</string>
    <string name="img_text">Facebook</string>
    <string name="bt_login">Log In</string>
    <string name="bt_sign">Sign Up for Facebook</string>
    <string name="bt_help">Need Help?</string>
    <string name="title_activity_detail">Bienvenido..</string>
    <string name="title_username_detail">Tu usuario es..</string>
    <string name="title_password_detail">Cuida tu password..</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
</resources>